added creatorisuser param

--- a/resources/rcvSpec.yaml
+++ b/resources/rcvSpec.yaml
@@ -361,6 +361,12 @@ components:
         pollOpen:
           description: Poll status on being opened for users.
           type: boolean
+        pollName:
+          description: Name for Poll entered by the user used as information purposes only.
+          type: string
+          minLength: 0
+          maxLength: 30
+          pattern: '^[a-zA-Z0-9 &quot;&apos;&amp;!#$%()*+,-./:;?@[\\]^_`{|}~]{0,30}$'
         startDate:
           description: Start date and time for poll to be open. Generated as ISO-0601 that format should be 'yyyy-mm-ddTHH:mm:ss.SSSZ'.
           type: string
@@ -371,19 +377,6 @@ components:
           type: string
           format: date-time
           example: '2021-04-21T17:32:28Z'
-        pollName:
-          description: Name for Poll entered by the user used as information purposes only.
-          type: string
-          minLength: 0
-          maxLength: 30
-          pattern: '^[a-zA-Z0-9 &quot;&apos;&amp;!#$%()*+,-./:;?@[\\]^_`{|}~]{0,30}$'
-        pollDesc:
-          description: Optional description for Poll entered by the user used as information
-            purposes only.
-          maxLength: 500
-          minLength: 0
-          pattern: ^[a-zA-Z0-9 &quot;&apos;&amp;!#$%()*+,-./:;?@[\\]^_`{|}~]{0,30}$
-          type: string
         maxNumRankedChoiceCount:
           type: integer
           format: int32
@@ -414,6 +407,9 @@ components:
           pattern: '^([a-zA-Z0-9]){0,14}$'
         pollOpen:
           description: Poll status on being opened for users.
+          type: boolean
+        userIsCreator:
+          description: Status on whether user is creator of poll
           type: boolean
         startDate:
           description: Start date and time for poll to be open. Generated as ISO-0601 that format should be 'yyyy-mm-ddTHH:mm:ss.SSSZ'.
